# cmake-test

./: CMakeLists.txt  README.md  main.cpp  mult.cpp  plus.cpp
headers/: mult.h  plus.h
